# akavesdk-py

./: .flake8  .gitignore  README.md  check_tuple.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_file_delete_index.py  test_ipc_upload_integration.py  test_web3.py
.github/workflows/: ci.yml  code-quality.yml
examples/: config.json  config.yaml
private/cids/: cids.py
private/eip712/: eip712.py  eip712_test.py
private/encryption/: encryption.py
private/erasure_code/: erasure_code.py
private/erasurecode/: __init__.py  erasure_code.py
private/httpext/: __init__.py  httpext.py
private/ipc/: batch_client.py  batch_client_test.py  block_parser.py  block_parser_test.py  client.py  client_test.py  errors.py  ipc.py  pdp_test.py
private/ipctest/: ipctest.py
private/memory/: __init__.py
private/pb/: __init__.py  ipcnodeapi_pb2.py  ipcnodeapi_pb2.pyi  ipcnodeapi_pb2_grpc.py  nodeapi_pb2.pyi  nodeapi_pb2_grpc.py
private/retry/: retry_test.py
private/spclient/: spclient.py
scripts/: install_dependencies.sh
sdk/: chunk_verifier.py  config.py  connection.py  dag.py  erasure_code.py  error_handling.py  model.py  sdk.py  sdk_ipc.py  sdk_streaming.py
tests/: .env.example  test_dag.py  test_erasure_code.py  test_sdk.py  test_streaming_connection.py
tests/fixtures/: common_fixtures.py
tests/integration/: test_ipc_upload.py
tests/mocks/: mock_ipc.py
tests/unit/: test_connection.py  test_dag.py  test_erasure_code.py  test_grpc_base.py  test_httpext.py  test_sdk_ipc.py  test_streaming_api.py
tests/utils/: test_helpers.py
(+9 files in other folders)
