[project]
name = "akavesdk"
version = "0.1.0"
description = "The Akave SDK for Python provides a simple interface to interact with the Akave platform."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GNU GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "grpcio (>=1.60.0)",
    "grpcio-tools (>=1.60.0)",
    "protobuf (>=5.26.1,<6.0dev)",
    "uuid (==1.30)",
    "ipfshttpclient (==0.8.0a2)",
    "cid (==0.1.3)",
    "multiformats (==0.3.1.post4)",
    "pycryptodome (==3.20.0)",
    "eth-utils (>=2.1.0)",
    "eth-hash (==0.7.1)",
    "eth-account (>=0.10.0)",
    "eth-keys (>=0.4.0)",
    "rlp (>=2.0.1)",
    "web3 (==6.11.3)",
    "opentelemetry-api (==1.28.0)",
    "opentelemetry-sdk (==1.28.0)",
    "opentelemetry-exporter-jaeger (==1.21.0)",
    "opentelemetry-instrumentation-grpc (==0.49b0)",
    "prometheus-client (==0.19.0)",
    "structlog (==24.1.0)",
    "pydantic (==2.6.3)",
    "rich (==13.7.0)",
    "click (==8.1.7)",
    "watchdog (==3.0.0)",
    "pyyaml (==6.0.1)",
    "cryptography (==36.0.0)",
    "reedsolo (>=1.7.0,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "types-protobuf (>=6.30.2.20250516,<7.0.0.0)",
    "ipld-dag-pb (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-mock = ">=3.12.0"
mypy = "^1.15.0"

